[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/roguelikeChar_transparent.png" type="Texture" id=1]
[ext_resource path="res://assets/robots.png" type="Texture" id=2]
[ext_resource path="res://scenes/Robot.gd" type="Script" id=3]
[ext_resource path="res://assets/burger.png" type="Texture" id=4]

[node name="Robot" type="Sprite"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )
script = ExtResource( 3 )

[node name="TShirt" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 154, -1, 16, 16 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Delay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Delay2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Food" type="Sprite" parent="."]
position = Vector2( 0, 5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Delay" to="." method="_on_Delay_timeout"]
[connection signal="timeout" from="Delay2" to="." method="_on_Delay2_timeout"]
